# agent-verify

./: .gitignore  LICENSE  README.md  action.yml  pyproject.toml
.github/workflows/: ci.yml
src/agent_verify/: __init__.py  cli.py  mcp_server.py  pipeline.py
src/agent_verify/analyzers/: __init__.py  ast_differ.py
src/agent_verify/ingest/: __init__.py  intent_extractor.py
src/agent_verify/models/: __init__.py  diff.py  intent.py  report.py
src/agent_verify/output/: __init__.py  cli_reporter.py
src/agent_verify/verifiers/: __init__.py  alignment.py  structural.py
tests/: __init__.py  test_alignment.py  test_ast_differ.py  test_ast_treesitter.py  test_cli.py  test_cli_reporter.py  test_intent_extractor.py  test_mcp_server.py  test_models.py  test_pipeline.py  test_structural.py
