[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-verify"
version = "0.1.0"
description = "AI code verification engine — validates whether AI-generated code actually does what was intended"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "hyunseung1119", email = "hyunseung1119@users.noreply.github.com" },
]
keywords = ["ai", "verification", "code-review", "mcp", "claude-code", "harness-engineering"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "tree-sitter>=0.21,<0.22",
    "tree-sitter-languages>=1.10",
    "pydantic>=2.0",
]

[project.optional-dependencies]
llm = [
    "anthropic>=0.40",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
]

[project.scripts]
agent-verify = "agent_verify.cli:main"

[project.urls]
Homepage = "https://github.com/hyunseung1119/agent-verify"
Repository = "https://github.com/hyunseung1119/agent-verify"
Issues = "https://github.com/hyunseung1119/agent-verify/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_verify"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
